# RAG_Learning

graph_generator/: EFX_dataset25.csv  all_in_one.py  circular_plot.py  left_to_right_plot.py  main.ipynb  td_tree.py  temp.ipynb
python_doc_rag/: .gitignore
python_doc_rag/v5/backend/: bm25_index.pkl  main.py  vector_store.py
python_doc_rag/v6/: README.md  constants.py
python_doc_rag/v6/architecture/: RAG_Architecture.drawio
python_doc_rag/v6/backend/: file_handler.py  llm.py  main.py  process_data.py  rag.py  retrieval_chains.py  utils.py  vector_store.py
python_doc_rag/v6/frontend/: main.py
python_doc_rag/v6/storage/: bm25_index.pkl  processed_texts.pkl
python_doc_rag/v7/: .env.sample  README.md  constants.py
python_doc_rag/v7/backend/: file_handler.py  llm.py  main.py  models.py  process_data.py  rag.py  retrieval_chains.py  utils.py  vector_store.py
python_doc_rag/v7/frontend/: main.py
sql_agent/src/sql_agent/: crew.py
sql_agent_2/: .env.sample  README.md  architecture.drawio
sql_agent_2/outputs/: product_B_sales.json  product_B_sales_summary.md
sql_agent_flow/: README.md  pyproject.toml
sql_agent_with_forecasting/: analysis_summary_product_B.md  daily_sales_product_B.json  requirements.txt  sales_patterns_product_B.json  summary_daily_sales_product_B.md
sql_agent_with_forecasting/outputs/: report_20250327_121840.md
url_crawler/: README.md  pyproject.toml
url_crawler/src/url_crawler/: crew.py  main.py  report.md
url_crawler/src/url_crawler/config/: agents.yaml  tasks.yaml
url_crawler/src/url_crawler/db/: chroma.sqlite3
(+28 files in other folders)
